Exported conda env

--- a/image_classification/exploration.ipynb
+++ b/image_classification/exploration.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-26T18:14:42.787318100Z",
-     "start_time": "2023-11-26T18:14:36.973126400Z"
+     "end_time": "2023-11-28T22:41:32.145680100Z",
+     "start_time": "2023-11-28T22:41:28.736788300Z"
     }
    },
    "outputs": [],
@@ -21,7 +21,14 @@
     "import lightning.pytorch.callbacks as pl_callbacks\n",
     "\n",
     "from util import set_seed\n",
-    "from weight_init import init_for_relu"
+    "from weight_init import init_for_relu\n",
+    "\n",
+    "# from ray.train.lightning import (\n",
+    "#     RayDDPStrategy,\n",
+    "#     RayLightningEnvironment,\n",
+    "#     RayTrainReportCallback,\n",
+    "#     prepare_trainer,\n",
+    "# )\n"
    ]
   },
   {
@@ -34,8 +41,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-26T18:14:42.801656600Z",
-     "start_time": "2023-11-26T18:14:42.788879Z"
+     "end_time": "2023-11-28T22:41:32.878910700Z",
+     "start_time": "2023-11-28T22:41:32.856908Z"
     }
    },
    "id": "e63de1d1a4e5f275"
@@ -54,30 +61,7 @@
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "Loading `train_dataloader` to estimate number of stepping batches.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "Finding best initial lr:   0%|          | 0/100 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "d60260561a3443bbbb7218bc6fc7e66a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=1` reached.\n",
-      "LR finder stopped early after 10 steps due to diverging loss.\n",
-      "Failed to compute suggestion for learning rate because there are not enough points. Increase the loop iteration limits or the size of your dataset/dataloader.\n",
-      "Restoring states from the checkpoint path at C:\\Users\\George Tzoupis\\source\\ailab\\image_classification\\.lr_find_e8d6779f-ec3c-4765-8542-ee6cbd109c5b.ckpt\n",
-      "Restored all states from the checkpoint at C:\\Users\\George Tzoupis\\source\\ailab\\image_classification\\.lr_find_e8d6779f-ec3c-4765-8542-ee6cbd109c5b.ckpt\n",
+      "Loading `train_dataloader` to estimate number of stepping batches.\n",
       "\n",
       "  | Name       | Type       | Params\n",
       "------------------------------------------\n",
@@ -86,8 +70,7 @@
       "1.2 M     Trainable params\n",
       "0         Non-trainable params\n",
       "1.2 M     Total params\n",
-      "4.920     Total estimated model params size (MB)\n",
-      "Restored all states from the checkpoint at C:\\Users\\George Tzoupis\\source\\ailab\\image_classification\\.lr_find_e8d6779f-ec3c-4765-8542-ee6cbd109c5b.ckpt\n"
+      "4.920     Total estimated model params size (MB)\n"
      ]
     },
     {
@@ -96,7 +79,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6b999ae8dfe641af910aca48b06ed4ac"
+       "model_id": "f4e262095a6f49d78511c2dbf8d63292"
       }
      },
      "metadata": {},
@@ -108,7 +91,67 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8d584a29916b43dc8fac4b3cfd652a85"
+       "model_id": "0f591c2895c6449f9e3d045567f70834"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "640b813197a24e3d987448fcef066903"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "f588240bc50e4b569054a28403c50296"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "4fdf886f894647ed91eaac22f14393cf"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c9f87e3b253b4c12843ff68e21366c1c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "bdb9ffa5f36a4cf5916343ed60b5ef97"
       }
      },
      "metadata": {},
@@ -118,7 +161,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=1` reached.\n"
+      "`Trainer.fit` stopped: `max_epochs=5` reached.\n"
      ]
     }
    ],
@@ -152,17 +195,23 @@
     "    save_last=True,\n",
     ")\n",
     "\n",
-    "tb_logger = pl_loggers.TensorBoardLogger(save_dir='./results', name='fashion_mnist',\n",
+    "tb_logger = pl_loggers.TensorBoardLogger(save_dir='./results',\n",
+    "                                         name='fashion_mnist',\n",
     "                                         sub_dir=model.__class__.__name__)\n",
     "\n",
-    "trainer = pl.Trainer(max_epochs=1,\n",
+    "trainer = pl.Trainer(max_epochs=5,\n",
     "                     limit_train_batches=10,\n",
     "                     limit_val_batches=10,\n",
     "                     callbacks=[\n",
-    "                         pl.callbacks.LearningRateFinder(),\n",
+    "                         # pl.callbacks.LearningRateFinder(),\n",
+    "                         # RayTrainReportCallback(),\n",
     "                         checkpoint_callback,\n",
     "                     ],\n",
     "                     logger=tb_logger,\n",
+    "                     # devices=\"auto\",\n",
+    "                     # accelerator=\"auto\",\n",
+    "                     # strategy=RayDDPStrategy(),\n",
+    "                     # plugins=[RayLightningEnvironment()],\n",
     "                     )\n",
     "\n",
     "trainer.fit(model=model,\n",
@@ -174,8 +223,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-26T18:10:39.195570700Z",
-     "start_time": "2023-11-26T18:09:21.949472900Z"
+     "end_time": "2023-11-28T22:42:22.717328700Z",
+     "start_time": "2023-11-28T22:42:07.100374500Z"
     }
    },
    "id": "c10f9d58693f3c15"
