Importing ray tune. WIP

--- a/image_classification/exploration.ipynb
+++ b/image_classification/exploration.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-28T22:41:32.145680100Z",
-     "start_time": "2023-11-28T22:41:28.736788300Z"
+     "end_time": "2023-12-02T20:08:57.881867200Z",
+     "start_time": "2023-12-02T20:08:57.741377800Z"
     }
    },
    "outputs": [],
@@ -23,12 +23,14 @@
     "from util import set_seed\n",
     "from weight_init import init_for_relu\n",
     "\n",
-    "# from ray.train.lightning import (\n",
-    "#     RayDDPStrategy,\n",
-    "#     RayLightningEnvironment,\n",
-    "#     RayTrainReportCallback,\n",
-    "#     prepare_trainer,\n",
-    "# )\n"
+    "from ray.train.lightning import (\n",
+    "    RayDDPStrategy,\n",
+    "    RayLightningEnvironment,\n",
+    "    RayTrainReportCallback,\n",
+    "    prepare_trainer,\n",
+    ")\n",
+    "\n",
+    "from ray import tune\n"
    ]
   },
   {
@@ -41,15 +43,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T22:41:32.878910700Z",
-     "start_time": "2023-11-28T22:41:32.856908Z"
+     "end_time": "2023-12-02T20:01:14.624764300Z",
+     "start_time": "2023-12-02T20:01:14.598978400Z"
     }
    },
    "id": "e63de1d1a4e5f275"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stderr",
@@ -60,108 +62,9 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "Loading `train_dataloader` to estimate number of stepping batches.\n",
       "\n",
-      "  | Name       | Type       | Params\n",
-      "------------------------------------------\n",
-      "0 | classifier | Sequential | 1.2 M \n",
-      "------------------------------------------\n",
-      "1.2 M     Trainable params\n",
-      "0         Non-trainable params\n",
-      "1.2 M     Total params\n",
-      "4.920     Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "Sanity Checking: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "f4e262095a6f49d78511c2dbf8d63292"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Training: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "0f591c2895c6449f9e3d045567f70834"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "640b813197a24e3d987448fcef066903"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "f588240bc50e4b569054a28403c50296"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "4fdf886f894647ed91eaac22f14393cf"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c9f87e3b253b4c12843ff68e21366c1c"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "bdb9ffa5f36a4cf5916343ed60b5ef97"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=5` reached.\n"
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -175,17 +78,17 @@
     "\n",
     "n_classes = len(train_dl.dataset.classes)\n",
     "\n",
-    "model = ResNetClassifier(\n",
-    "    n_classes=n_classes,\n",
-    "    opt='AdamW',\n",
-    "    lr=1e-1,\n",
-    "    wd=1e-4, ).apply(init_for_relu)\n",
-    "\n",
-    "# model = MLPClassifier(\n",
-    "#     input_sz=28 * 28,\n",
+    "# model = ResNetClassifier(\n",
     "#     n_classes=n_classes,\n",
-    "#     n_features=(16, 32, 64, 128,)\n",
-    "# ).apply(init_for_relu)\n",
+    "#     opt='AdamW',\n",
+    "#     lr=1e-1,\n",
+    "#     wd=1e-4, ).apply(init_for_relu)\n",
+    "\n",
+    "model = MLPClassifier(\n",
+    "    input_sz=28 * 28,\n",
+    "    n_classes=n_classes,\n",
+    "    n_features=(16, 32, 64, 128,)\n",
+    ").apply(init_for_relu)\n",
     "\n",
     "checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
     "    save_top_k=1,\n",
@@ -223,8 +126,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T22:42:22.717328700Z",
-     "start_time": "2023-11-28T22:42:07.100374500Z"
+     "end_time": "2023-12-02T20:01:18.407325300Z",
+     "start_time": "2023-12-02T20:01:15.046823400Z"
     }
    },
    "id": "c10f9d58693f3c15"
@@ -232,15 +135,86 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Seed set to 42\n"
+     ]
+    }
+   ],
    "source": [
-    " "
+    "pl.seed_everything(42, True)\n",
+    "\n",
+    "search_space = {\n",
+    "    \"layer_1_size\": tune.choice([32, 64, 128]),\n",
+    "    \"layer_2_size\": tune.choice([64, 128, 256]),\n",
+    "    \"lr\": tune.loguniform(1e-4, 1e-1),\n",
+    "    \"batch_size\": tune.choice([16, 32]),\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def train_func(config):\n",
+    "    train_dl, valid_dl, test_dl = FashionMNIST.get_dataloaders(batch_size=config['batch_size'],\n",
+    "                                                               pin_memory=True,\n",
+    "                                                               num_workers=4,\n",
+    "                                                               persistent_workers=True)\n",
+    "\n",
+    "    n_classes = len(train_dl.dataset.classes)\n",
+    "\n",
+    "    # model = ResNetClassifier(\n",
+    "    #     n_classes=n_classes,\n",
+    "    #     opt='AdamW',\n",
+    "    #     lr=1e-1,\n",
+    "    #     wd=1e-4, ).apply(init_for_relu)\n",
+    "\n",
+    "    model = MLPClassifier(\n",
+    "        input_sz=28 * 28,\n",
+    "        n_classes=n_classes,\n",
+    "        n_features=(config['layer_1_size'], config['layer_2_size'],),\n",
+    "        lr=config['lr'],\n",
+    "    ).apply(init_for_relu)\n",
+    "\n",
+    "    checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
+    "        save_top_k=1,\n",
+    "        monitor=\"accuracy/val\",\n",
+    "        mode=\"max\",\n",
+    "        filename=\"best-{epoch:02d}\",\n",
+    "        save_last=True,\n",
+    "    )\n",
+    "\n",
+    "    tb_logger = pl_loggers.TensorBoardLogger(save_dir='./results',\n",
+    "                                             name='fashion_mnist',\n",
+    "                                             sub_dir=model.__class__.__name__)\n",
+    "\n",
+    "    trainer = pl.Trainer(max_epochs=5,\n",
+    "                         limit_train_batches=10,\n",
+    "                         limit_val_batches=10,\n",
+    "                         callbacks=[\n",
+    "                             # pl.callbacks.LearningRateFinder(),\n",
+    "                             RayTrainReportCallback(),\n",
+    "                             checkpoint_callback,\n",
+    "                         ],\n",
+    "                         logger=tb_logger,\n",
+    "                         devices=\"auto\",\n",
+    "                         accelerator=\"auto\",\n",
+    "                         strategy=RayDDPStrategy(),\n",
+    "                         plugins=[RayLightningEnvironment()],\n",
+    "                         )\n",
+    "\n",
+    "    trainer = prepare_trainer(trainer)\n",
+    "    trainer.fit(model=model,\n",
+    "                train_dataloaders=train_dl,\n",
+    "                val_dataloaders=valid_dl,\n",
+    "                # ckpt_path='./results/fashion_mnist/version_5/checkpoints/best-epoch=04.ckpt'\n",
+    "                )"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-26T18:08:05.358108800Z",
-     "start_time": "2023-11-26T18:08:05.332058300Z"
+     "end_time": "2023-12-02T20:12:03.547070900Z",
+     "start_time": "2023-12-02T20:12:03.541488200Z"
     }
    },
    "id": "750feb6a20eb93f"
